--- a/SchetsPlus/SchetsPlus.csproj
+++ b/SchetsPlus/SchetsPlus.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Hoofdscherm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Layers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schets.cs" />
