--- a/SchetsPlus/SchetsPlus.csproj
+++ b/SchetsPlus/SchetsPlus.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Layers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Schets.cs" />
     <Compile Include="SchetsControl.cs">
       <SubType>UserControl</SubType>
@@ -66,14 +71,9 @@
     <Compile Include="Tools.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -103,13 +103,10 @@
     <None Include="Resources\text.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\rondje.bmp" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\rondje.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\cirkel.png" />
+    <None Include="Resources\ellips.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
