Added a help window + Added HelpWindow which contains a help window + Added a menu entry 'Help' to the 'Help' menu of Hoofdscherm to open the help window * When importing a bitmap it is now just added as a layer (no longer are the other layers and history removed) * Created a helper method setTool() in SchetsWin to prevent duplicate code * A filled rectangle is now drawn without anti-aliasing * Some minor code and (mostly) comment improvements
Signed-off-by: Mark Kamsma <mark@markkamsma.nl>

--- a/SchetsPlus/SchetsPlus.csproj
+++ b/SchetsPlus/SchetsPlus.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions.cs" />
+    <Compile Include="HelpWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelpWindow.Designer.cs">
+      <DependentUpon>HelpWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Hoofdscherm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Tools.cs" />
+    <EmbeddedResource Include="HelpWindow.resx">
+      <DependentUpon>HelpWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
